[package]
name = "bdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cucumber = { version = "0.13", features = ["macros","timestamps","output-json","output-junit"] }
tokio = { version = "1.20.0", features = ["full"] }

[[test]]
name = "example" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

