[package]
name = "cucumber-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
cucumber = { version = "0.13", features = ["macros","timestamps","output-json","output-junit"] }
thiserror = "1"
tokio = { version = "1.20.0", features = ["full"] }

[[test]]
name = "example" 
harness = false

